add base url /MediumUs to Route and hrefs

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
 
     <!-- <link rel="icon" href="/favicon-medium.ico" /> -->
     <title>MediumUS</title>
+
+    <!-- <base href="/MediumUs/" /> -->
   </head>
 
   <body>
