--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,10 @@
     <title>MediumUS</title>
 
     <!-- <base href="/MediumUs/" /> -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'"
+    />
   </head>
 
   <body>
