try to fix content security policy violation problem in with meta config

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- <base href="/MediumUs/" /> -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'"
+      content="default-src 'none'; connect-src 'self';font-src 'self' data:; img-src * data: https:; style-src * ; script-src 'self'"
     />
   </head>
 
