ammend meta with more rules

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- <base href="/MediumUs/" /> -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'none'; connect-src 'self';font-src 'self' data:; img-src * data: https:; style-src * ; script-src 'self'"
+      content="default-src 'none'; connect-src * 'self';font-src 'self' data:; img-src * data: https:; style-src * 'unsafe-inline'; script-src 'self' 'unsafe-eval'"
     />
   </head>
 
