--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- <link rel="icon" href="/favicon-medium.ico" /> -->
-    <title>MediumUS</title>
+    <title>MediumUs</title>
 
     <!-- <base href="/MediumUs/" /> -->
     <meta
